tests/snapshots/snapshots__ast_struct_and_impl.snap
---
source: tests/snapshots.rs
assertion_line: 41
expression: file
---
File {
    format_version: 1,
    statements: [
        Definition(
            Struct(
                StructDef {
                    visibility: Private,
                    name: Ident {
                        name: "Point",
                        span: Span {
                            start: Location {
                                offset: 16,
                                line: 2,
                                column: 16,
                            },
                            end: Location {
                                offset: 21,
                                line: 2,
                                column: 21,
                            },
                        },
                    },
                    generics: [],
                    fields: [
                        StructField {
                            mutable: false,
                            name: Ident {
                                name: "x",
                                span: Span {
                                    start: Location {
                                        offset: 24,
                                        line: 2,
                                        column: 24,
                                    },
                                    end: Location {
                                        offset: 25,
                                        line: 2,
                                        column: 25,
                                    },
                                },
                            },
                            ty: Primitive(
                                Number,
                            ),
                            optional: false,
                            default: None,
                            doc: None,
                            span: Span {
                                start: Location {
                                    offset: 24,
                                    line: 2,
                                    column: 24,
                                },
                                end: Location {
                                    offset: 33,
                                    line: 2,
                                    column: 33,
                                },
                            },
                        },
                        StructField {
                            mutable: false,
                            name: Ident {
                                name: "y",
                                span: Span {
                                    start: Location {
                                        offset: 35,
                                        line: 2,
                                        column: 35,
                                    },
                                    end: Location {
                                        offset: 36,
                                        line: 2,
                                        column: 36,
                                    },
                                },
                            },
                            ty: Primitive(
                                Number,
                            ),
                            optional: false,
                            default: None,
                            doc: None,
                            span: Span {
                                start: Location {
                                    offset: 35,
                                    line: 2,
                                    column: 35,
                                },
                                end: Location {
                                    offset: 44,
                                    line: 2,
                                    column: 44,
                                },
                            },
                        },
                    ],
                    doc: None,
                    span: Span {
                        start: Location {
                            offset: 9,
                            line: 2,
                            column: 9,
                        },
                        end: Location {
                            offset: 46,
                            line: 2,
                            column: 46,
                        },
                    },
                },
            ),
        ),
        Definition(
            Impl(
                ImplDef {
                    trait_name: None,
                    name: Ident {
                        name: "Point",
                        span: Span {
                            start: Location {
                                offset: 61,
                                line: 4,
                                column: 14,
                            },
                            end: Location {
                                offset: 66,
                                line: 4,
                                column: 19,
                            },
                        },
                    },
                    generics: [],
                    functions: [
                        FnDef {
                            name: Ident {
                                name: "magnitude",
                                span: Span {
                                    start: Location {
                                        offset: 84,
                                        line: 5,
                                        column: 16,
                                    },
                                    end: Location {
                                        offset: 93,
                                        line: 5,
                                        column: 25,
                                    },
                                },
                            },
                            params: [
                                FnParam {
                                    convention: Let,
                                    external_label: None,
                                    name: Ident {
                                        name: "self",
                                        span: Span {
                                            start: Location {
                                                offset: 94,
                                                line: 5,
                                                column: 26,
                                            },
                                            end: Location {
                                                offset: 98,
                                                line: 5,
                                                column: 30,
                                            },
                                        },
                                    },
                                    ty: None,
                                    default: None,
                                    span: Span {
                                        start: Location {
                                            offset: 94,
                                            line: 5,
                                            column: 26,
                                        },
                                        end: Location {
                                            offset: 98,
                                            line: 5,
                                            column: 30,
                                        },
                                    },
                                },
                            ],
                            return_type: Some(
                                Primitive(
                                    Number,
                                ),
                            ),
                            body: Some(
                                BinaryOp {
                                    left: Reference {
                                        path: [
                                            Ident {
                                                name: "self",
                                                span: Span {
                                                    start: Location {
                                                        offset: 128,
                                                        line: 6,
                                                        column: 17,
                                                    },
                                                    end: Location {
                                                        offset: 132,
                                                        line: 6,
                                                        column: 21,
                                                    },
                                                },
                                            },
                                            Ident {
                                                name: "x",
                                                span: Span {
                                                    start: Location {
                                                        offset: 133,
                                                        line: 6,
                                                        column: 22,
                                                    },
                                                    end: Location {
                                                        offset: 134,
                                                        line: 6,
                                                        column: 23,
                                                    },
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: Location {
                                                offset: 128,
                                                line: 6,
                                                column: 17,
                                            },
                                            end: Location {
                                                offset: 134,
                                                line: 6,
                                                column: 23,
                                            },
                                        },
                                    },
                                    op: Add,
                                    right: Reference {
                                        path: [
                                            Ident {
                                                name: "self",
                                                span: Span {
                                                    start: Location {
                                                        offset: 137,
                                                        line: 6,
                                                        column: 26,
                                                    },
                                                    end: Location {
                                                        offset: 141,
                                                        line: 6,
                                                        column: 30,
                                                    },
                                                },
                                            },
                                            Ident {
                                                name: "y",
                                                span: Span {
                                                    start: Location {
                                                        offset: 142,
                                                        line: 6,
                                                        column: 31,
                                                    },
                                                    end: Location {
                                                        offset: 143,
                                                        line: 6,
                                                        column: 32,
                                                    },
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: Location {
                                                offset: 137,
                                                line: 6,
                                                column: 26,
                                            },
                                            end: Location {
                                                offset: 143,
                                                line: 6,
                                                column: 32,
                                            },
                                        },
                                    },
                                    span: Span {
                                        start: Location {
                                            offset: 128,
                                            line: 6,
                                            column: 17,
                                        },
                                        end: Location {
                                            offset: 143,
                                            line: 6,
                                            column: 32,
                                        },
                                    },
                                },
                            ),
                            doc: None,
                            span: Span {
                                start: Location {
                                    offset: 81,
                                    line: 5,
                                    column: 13,
                                },
                                end: Location {
                                    offset: 157,
                                    line: 7,
                                    column: 14,
                                },
                            },
                        },
                    ],
                    is_extern: false,
                    doc: None,
                    span: Span {
                        start: Location {
                            offset: 56,
                            line: 4,
                            column: 9,
                        },
                        end: Location {
                            offset: 167,
                            line: 8,
                            column: 10,
                        },
                    },
                },
            ),
        ),
    ],
    span: Span {
        start: Location {
            offset: 9,
            line: 0,
            column: 0,
        },
        end: Location {
            offset: 167,
            line: 0,
            column: 0,
        },
    },
}
